--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "post-maker-app",
   "version": "1.0.0",
   "description": "",
-  "main": "nodemon dist/src/index.js",
+  "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/src/index.js",
