--- a/server/package.json
+++ b/server/package.json
@@ -6,22 +6,10 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/src/index.js",
-    "build": " npm run clean && npx tsc",
-    "clean": "rm -rf dist",
-    "start": "node dist/index.js",
-    "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts",
-    "create:migration": "mikro-orm migration:create",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "create:superuser": "ts-node commands/createsuperuser.ts",
-    "run:command": "ts-node -r tsconfig-paths/register commands/index.ts"
+    "start": "node dist/index.js"
   },
   "prisma": {
     "seed": "ts-node prisma/seed/index.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/codagehabitation/post-maker-app.git"
   },
   "keywords": [],
   "author": "",
