--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/src/index.js",
+    "dev": "nodemon dist/src/app.js",
     "start": "node dist/index.js"
   },
   "prisma": {
