--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/src/index.js",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build": " npm run clean && npx tsc",
+    "clean": "rm -rf dist",
+    "start2": "ts-node src/index.ts",
+    "dev2": "nodemon --exec ts-node src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create:superuser": "ts-node commands/createsuperuser.ts",
+    "run:command": "ts-node -r tsconfig-paths/register commands/index.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed/index.ts"
