--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/src/index.js",
-    "build": " npm run clean && npx tsc",
+    "build": "npm run build",
     "clean": "rm -rf dist",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
