--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@types/cors": "^2.8.13",
     "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.7",
+    "@types/graphql-fields": "^1.3.9",
     "@types/graphql-upload": "^15.0.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.192",
